--- a/za.html
+++ b/za.html
@@ -71,7 +71,7 @@
         </div>
         <!--<button style="background-color: olivegreen;"  onclick="document.getElementById('id02').style.display='block'"
         style="width:auto;">Submit</button>-->
-         <a href="za1.html" class="btn">Submit</a>
+         <a href="za1.html">Submit</a>
         </form>
     </section>
   </body>
